fix(instagram): links in direct messages having horrible contrast

--- a/styles/instagram/catppuccin.user.css
+++ b/styles/instagram/catppuccin.user.css
@@ -795,14 +795,19 @@
 
     /* Chat button */
     .x1i10hfl:hover {
-      background-color: @surface0;
       color: @text;
+    }
+    .x1bvjpef {
+      color: @crust;
+    }
+    .x1bvjpef:hover {
+      color: darken(@accent-color, 30%)
     }
 
     /* notes */
     .xsnw5ke,
     .x3zg9eu::after {
-      background-color: @surface0;
+      background-color: @surface0 !important;
     }
     .x103n6ev,
     .xzxgvzf {
